Overflow fixed

--- a/src/styles/_image-slider.scss
+++ b/src/styles/_image-slider.scss
@@ -1,4 +1,5 @@
 .slider {
+  overflow-y: scroll;
   position: fixed;
   top: 0;
   left: 0;
